fix: ContextMenu loading flickering fix

--- a/front/src/components/Map/ContextMenu/menu.module.scss
+++ b/front/src/components/Map/ContextMenu/menu.module.scss
@@ -1,8 +1,7 @@
 .wrapper {
-  width: 320px;
   max-width: 100%;
 }
 
 .hidden {
-  position: absolute;
+  visibility: hidden;
 }
