--- a/front/src/components/Map/Controls/controls.module.scss
+++ b/front/src/components/Map/Controls/controls.module.scss
@@ -9,7 +9,7 @@
   top: 5px;
   right: 5px;
 
-  width: 320px;
+  width: 310px;
   padding: 10px;
   z-index: 2;
 
